output/facebook/rocksdb/1286.txt
Hi.
Freebsd build fail with `stoull` is not a member of `std` error

```
]>uname -a
FreeBSD devel.ximad.com 10.2-RELEASE-p9 FreeBSD 10.2-RELEASE-p9 #0: Thu Jan 14 01:32:46 UTC 2016     root@amd64-builder.daemonology.net:/usr/obj/usr/src/sys/GENERIC  amd64
```

```
]>gcc -v
Using built-in specs.
COLLECT_GCC=gcc
COLLECT_LTO_WRAPPER=/usr/local/libexec/gcc48/gcc/x86_64-portbld-freebsd10.2/4.8.5/lto-wrapper
Target: x86_64-portbld-freebsd10.2
Configured with: ./../gcc-4.8.5/configure --disable-multilib --disable-bootstrap --disable-nls --enable-gnu-indirect-function --libdir=/usr/local/lib/gcc48 --libexecdir=/usr/local/libexec/gcc48 --program-suffix=48 --with-as=/usr/local/bin/as --with-gmp=/usr/local --with-gxx-include-dir=/usr/local/lib/gcc48/include/c++/ --with-ld=/usr/local/bin/ld --with-pkgversion='FreeBSD Ports Collection' --with-system-zlib --with-ecj-jar=/usr/local/share/java/ecj-4.5.jar --enable-languages=c,c++,objc,fortran,java --prefix=/usr/local --localstatedir=/var --mandir=/usr/local/man --infodir=/usr/local/info/gcc48 --build=x86_64-portbld-freebsd10.2
Thread model: posix
gcc version 4.8.5 (FreeBSD Ports Collection) 
```

```
]>git clone https://github.com/facebook/rocksdb
]>cd rocksdb
]>gmake
Makefile:101: Warning: Compiling in debug mode. Don't use the resulting binary in production
  GEN      util/build_version.cc
...
  CC       util/lru_cache.o
  CC       util/threadpool.o
  CC       util/transaction_test_util.o
util/transaction_test_util.cc: In member function 'bool rocksdb::RandomTransactionInserter::DoInsert(rocksdb::DB*, rocksdb::Transaction*, bool)':
util/transaction_test_util.cc:97:19: error: 'stoull' is not a member of 'std'
       int_value = std::stoull(value);
                   ^
util/transaction_test_util.cc: In static member function 'static rocksdb::Status rocksdb::RandomTransactionInserter::Verify(rocksdb::DB*, uint16_t)':
util/transaction_test_util.cc:208:28: error: 'stoull' is not a member of 'std'
       uint64_t int_value = std::stoull(value.ToString());
                            ^
gmake: *** [Makefile:1456: util/transaction_test_util.o] Error 1
```

